--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "concurrently \"yarn serve:dev\" \"yarn migrate:watch\"",
+    "serve:dev": "./start.dev.sh",
+    "migrate:init": "graphile-migrate init",
+    "migrate:watch": "graphile-migrate watch"
   },
   "license": "MIT",
   "dependencies": {
+    "@graphile-contrib/pg-simplify-inflector": "^6.0.0",
+    "concurrently": "^5.3.0",
+    "graphile-migrate": "^1.0.1",
     "nodemon": "^2.0.4",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "postgraphile": "^4.9.0"
   }
 }
